static/styles/comm.css
/* ... */
.chat-bar p {
    color: #fff;
    border: none;
    text-align: left;
    padding: 5px 5px;
    caret-color: #ffffff;
    font-family: "Poppins", sans-serif;
    border-bottom: 5px solid #fff;
}

.chat-bar p:focus {
    outline: 0;
}

.chat-bar p:read-write:focus {
    outline: 0;
}

p[contenteditable="true"]:empty:not(:focus):before {
    display: none;
    position: absolute;
    content: attr(placeholder);
}

input::-webkit-input-placeholder {
    color: #fff;
}
input:focus::-webkit-input-placeholder {
    color: rgba(199, 131, 49, 0.5);
}

/* Firefox < 19 */
input:-moz-placeholder {
    color: #fff;
}
input:focus:-moz-placeholder {
    color: rgba(199, 131, 49, 0.5)
}

/* Firefox > 19 */
input::-moz-placeholder {
    color: #fff;
}
input:focus::-moz-placeholder {
    color: rgba(199, 131, 49, 0.5)
}

/* Internet Explorer 10 */
input:-ms-input-placeholder {
    color: #fff;
}
input:focus:-ms-input-placeholder {
    color: rgba(199, 131, 49, 0.5)
}

.chat-bar button {
    border: none;
    width: 30px;
    rotate: 270deg;
}

.chat-bar button {
    background-color: transparent;
    cursor: pointer;
    filter: invert(100);
    display: none;
}

.typing-indicator {
    position: absolute;
    bottom: 0px;
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-weight: 600;
    color: #fff;
}

.typing-indicator {
    -moz-animation-timing-function: cubic-bezier(0.4, 0, 1, 1);
    -webkit-animation-timing-function: cubic-bezier(0.4, 0, 1, 1);
    animation-timing-function: cubic-bezier(0.4, 0, 1, 1);
    animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -moz-animation-name: fade-bounce;
    -webkit-animation-name: fade-bounce;
    animation-name: fade-bounce;
    animation-duration: 0.75s;
}

.chatbar-puppets {
    display: flex;
    display: none;
    align-self: center;
    border-bottom: 5px solid #090809;
    width: 100%;
    padding-left: 10px;
    gap: 20px;
    box-sizing: border-box;
}

.chatbar-puppets {
    overflow-x: scroll;
    overflow-y: hidden;
}

.puppet {
    height: fit-content;
}

.puppet input {
    display: none;
}

.puppet label {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-size: 26px;
}

.puppet label {
    cursor: pointer;
}

.puppet input:checked + label{
    font-size: 36px;
}

.puppet-shadow-OR {
    box-shadow: inset 0 -8px 0 #f28500;
}

.puppet-shadow-BL {
    box-shadow: inset 0 -8px 0 #00baf2;
}

.puppet-shadow-GR {
    box-shadow: inset 0 -8px 0 #0fb300;
}

.puppet-shadow-RE {
    box-shadow: inset 0 -8px 0 #fb3a3a;
}

.puppet-shadow-PU {
    box-shadow: inset 0 -8px 0 #5934ff;
}

.puppet-shadow-BR {
    box-shadow: inset 0 -8px 0 #884A39;
}

.puppet-shadow-MA {
    box-shadow: inset 0 -8px 0 #ac0000;
}

.puppet-shadow-DR {
    box-shadow: inset 0 -8px 0 #025464;
}

/* width */
.chatbar-puppets::-webkit-scrollbar {
    height: 2px;
}
  
  /* Track */
.chatbar-puppets::-webkit-scrollbar-track {
    background: none;
}
  
  /* Handle */
  .chatbar-puppets::-webkit-scrollbar-thumb {
    background: #f28500;
    border-radius: 0;
}

@-webkit-keyframes fade-bounce {
    0% {
      opacity: 100%;
    }
  
    50% {
        opacity: 25%;
    }

    100% {
        opacity: 100%;
    }
}
  
@keyframes fade-bounce {
    0% {
        opacity: 100%;
      }
    
      50% {
          opacity: 25%;
      }
  
      100% {
          opacity: 100%;
      }
}

@media (hover: hover){
    .chat-bar button svg:hover {
        filter: invert(55%) sepia(75%) saturate(3223%) hue-rotate(10deg) brightness(102%) contrast(107%);
    }
}

.chat-bar button:active > svg {
    filter: invert(55%) sepia(75%) saturate(3223%) hue-rotate(10deg) brightness(102%) contrast(107%);
}

.counter-board {
    display: flex;
    overflow-y: auto;
    height: 100%;
    background-color: #090809;
}

.counter-board {
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
    scrollbar-width: none;  /* Firefox */
}
.counter-board::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}

.counter-ranking {
    display: flex;
    gap: 100px;
    flex-direction: column;
    width: 100vw;
}

.position {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    gap: 10px;
    background-color: white;
}

.rank-message-line {
    width: 150px;
    margin-left: 5px;
    border: 2px solid #00baf2;
}

.position {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    border-left: 48px solid #F28500;
}

.rank {
    width: 100%;
    box-sizing: border-box;
    font-size: 6vw;
    border-top: 10px solid #F28500;
    border-bottom: 10px solid #F28500;
    border-right: 10px solid #F28500;
    padding-left: 10px;
}

.rank-message {
    display: flex;
    flex-direction: column;
    margin: 0 10px;
    max-width: 100vw;
}

.rank-message-reply {
    margin-left: 5px;
    font-size: 18px;
}

.rank-message-reply span {
    box-shadow: inset 0 -10px 0 #30f200;
}

.rank-message-reply span:hover {
    cursor: pointer;
}

.rank-content {
    overflow: hidden;
    font-size: 6vw;
    margin-left: 5px;
}

.rank-author {
    margin-left: 5px;
    font-size: 6vw;
}

.rank-author span {
    box-shadow: inset 0 -3vw 0 #F28500;
}

.rank-score {
    width: 100%;
    box-sizing: border-box;
    font-size: 4vw;
    border-top: 10px solid #F28500;
    border-bottom: 10px solid #F28500;
    border-right: 10px solid #F28500;
}

.rank-score span {
    display: flex;
    width: fit-content;
    margin-right: 20px;
    margin-left: auto;
    color: #F28500;
}

.dog-board {
    display: flex;
}

.dogs {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.dog {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.dog-message-line {
    width: 240px;
    margin-left: 10px;
    border: 2px solid #F28500;
}

.dog {
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
}
/* ... */

